site/style.css
<style>
/* TODOs
 - headers with auto anchors
 - Add more personality, uniqueness
 - make images nice
 - add nice fonts
*/
/*Import Lato*/
@import url('fonts/lato.css');

html {
  max-width: 80ch;
  padding: 3em 2em 1em;
  margin: auto;
  line-height: 1.5;
  font-size: 1.2em;
  font-family: 'Lato', sans-serif;
}
  
body {
  max-width: 80ch;
  padding: 3em 2em 1em;
  font-family: 'Lato', sans-serif;
  margin: auto;
  color: #333;
  font-size: 1.2rem;
  margin-bottom: 1em;
  background: linear-gradient(
    #fff, #f3f0ff, #fff0f6, #fff4e6, #fff
  );
}


p.date {
  color: #777;
  font-size: 0.6em;
  padding: 0em;
  margin: 0em;
  line-height: 1;
  font-style: italic;

}


#blog-title, h1.title, h1,h2,h3,h4,h5,h6 {
  font-weight: 300;
  font-family: 'Montserrat', sans-serif;
  line-height: 1;
  font-weight: bold;
}
h1:hover, h2:hover, h3:hover, h4:hover, h5:hover, h6:hover {
  transition: all .125s;
  /*text-shadow: 0px 4px 8px #0004; Can't figure out auto-linking... */
}

#blog-title, h1.title, h1, h2 {
  margin-left: -1.2em;
  padding-left: 0.6em;
}
h3, h4 {
  margin-left: -0.6em;
  padding-left: 0.3em;
}

#blog-title{
  color: #4c6ef5;
  font-size: 1.8em;
  font-weight: black;
  border-bottom: 0px solid #4c6ef5;
  padding: 0.2em;
  border-radius: 0.2em;
}
#blog-title:hover{
  transition: all 0.125s; 
  background: linear-gradient(90deg, #364fc7, #5f3dc4);
  color: #e3fafc;
}

h1.title {
  color: #4c6ef5;
  font-size: 2.4rem;
  padding-bottom: 1em;
  font-weight: bolder;
}
h1 {
  color: #e64980;
  font-size: 2.4rem;
}
h2 {
  color: #be4bdb;
  font-size: 2.1rem;
}
h3 {
  color: #7950f2;
  font-size: 1.8rem;
}
h4 {
  color: #4c6ef5;
  font-size: 1.5rem;
}
h5 {
  color: #228be6;
  font-size: 1.35rem;
}
h6 {
  color: #1864ab;
  font-size: 1.2rem;
}

a {
  color: #d6336c;
  text-decoration: none;
  border-radius: 2px;
}
a:hover{
  transition: all 0s; 
  background: linear-gradient(90deg, #5f3dc4, #364fc7);
  color: #e3fafc;
  text-shadow: 0px 0px 1px #fff4;
}
body::selection, p::selection, h1::selection {
  /*background-color: linear-gradient(#5f3dc4, #364fc7);*/
  background-color: #364fc7;
  color: #e3fafc;
}
code::selection {
  /*background-color: linear-gradient(#5f3dc4, #364fc7);*/
  background-color: #212529;
  color: #51Ef66;
}
a::selection {
  /*background-color: linear-gradient(#5f3dc4, #364fc7);*/
  background-color: #212529;
  color: #faa2c1;
}

/*
img {
  max-width: 100%;
  margin: auto;
  background: repeating-linear-gradient(
    -60deg,
    #49505720,
    #495057820 8px,
    #21252920 8px,
    #21252920 16px
  ), repeating-linear-gradient(
    30deg,
    #49505720,
    #49505720 8px,
    #21252920 8px,
    #21252920 16px
  );
}
*/

img {
  border: 1px solid #ffffff80;
  max-width: 100%;
  margin: auto;
}
img:hover {
  transition: all .125s;
  border: 1px solid #9775fa;
  box-shadow: 3px 6px 2px 2px #343a4020;
}


blockquote {
  border-left: 2px solid #c2255c;
  padding-left: .8em;
  margin-left: .2em;
}
/* color nested blockquotes */
/* One can use jquery to make this pattern extend past 6. */
blockquote blockquote { border-left: 2px solid #9c36b5; }
blockquote blockquote blockquote { border-left: 2px solid #6741d9; }
blockquote blockquote blockquote blockquote { border-left: 2px solid #3b5bdb; }
blockquote blockquote blockquote blockquote blockquote { border-left: 2px solid #1971c2; }
blockquote blockquote blockquote blockquote blockquote blockquote { border-left: 2px solid #0c8599; }

figcaption {
  display: none;
}



</style>

